--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   animated_flip_counter: ^0.3.4
   intl: ^0.19.0
   window_manager: ^0.4.3
+  tray_manager: ^0.2.4
 
 dev_dependencies:
   build_runner: ^2.4.11
@@ -114,6 +115,7 @@ flutter:
     - assets/branding-text.svg
     - assets/startup_0.ogg
     - assets/startup_1.ogg
+    - assets/linux-tray.svg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
