--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,7 +72,7 @@ dependencies:
   animated_flip_counter: ^0.3.4
   intl: ^0.19.0
   window_manager: ^0.4.3
-  tray_manager: ^0.2.4
+  system_tray: ^2.0.3
 
 dev_dependencies:
   build_runner: ^2.4.11
@@ -116,6 +116,8 @@ flutter:
     - assets/startup_0.ogg
     - assets/startup_1.ogg
     - assets/linux-tray.svg
+    - assets/tray_icon_light.ico
+    - assets/tray_icon_dark.ico
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
