--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,8 +71,9 @@ dependencies:
   permission_handler: ^11.3.1
   animated_flip_counter: ^0.3.4
   intl: ^0.19.0
-  window_manager: ^0.4.3
   system_tray: ^2.0.3
+  bitsdojo_window: ^0.1.6
+  flutter_window_close: ^1.2.0
 
 dev_dependencies:
   build_runner: ^2.4.11
