--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   bitsdojo_window: ^0.1.6
   flutter_window_close: ^1.2.0
   tray_manager: ^0.3.0
+  desktop_window: ^0.4.2
 
 dev_dependencies:
   build_runner: ^2.4.11
