--- a/playback/Cargo.toml
+++ b/playback/Cargo.toml
@@ -12,7 +12,7 @@ path = "src/lib.rs"
 log = { version = "0.4.22" }
 futures = "0.3.30"
 tokio = { version = "1.40.0", features = ["sync", "time", "macros", "rt-multi-thread", "rt"] }
-rodio = { version = "0.20.0", features = [] }
+rodio = { version = "0.20.0", default-features = false,  features = ["vorbis", "wav", "symphonia-mp3", "symphonia-aac", "symphonia-aiff", "symphonia-alac", "symphonia-flac", "symphonia-isomp4"] }
 rustfft = "6.2.0"
 tokio-util = "0.7.11"
 rand = "0.8.5"
