--- a/playback/Cargo.toml
+++ b/playback/Cargo.toml
@@ -11,14 +11,35 @@ path = "src/lib.rs"
 [dependencies]
 log = { version = "0.4.22" }
 futures = "0.3.30"
-tokio = { version = "1.40.0", features = ["sync", "time", "macros", "rt-multi-thread", "rt"] }
-rodio = { version = "0.20.0", default-features = false,  features = ["vorbis", "wav", "symphonia-mp3", "symphonia-aac", "symphonia-aiff", "symphonia-alac", "symphonia-flac", "symphonia-isomp4"] }
+tokio = { version = "1.40.0", features = [
+    "sync",
+    "time",
+    "macros",
+    "rt-multi-thread",
+    "rt",
+] }
+rodio = { version = "0.20.0", default-features = false, features = [
+    "vorbis",
+    "wav",
+    "symphonia-mp3",
+    "symphonia-aac",
+    "symphonia-aiff",
+    "symphonia-alac",
+    "symphonia-flac",
+    "symphonia-isomp4",
+] }
 rustfft = "6.2.0"
 tokio-util = "0.7.11"
 rand = "0.8.5"
 anyhow = "1.0.89"
 raw-window-handle = "0.5.2"
-windows = {version = "0.44.0", features = ["Win32_System_LibraryLoader", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi"] }
+windows = { version = "0.44.0", features = [
+    "Win32_System_LibraryLoader",
+    "Win32_UI",
+    "Win32_UI_WindowsAndMessaging",
+    "Win32_Foundation",
+    "Win32_Graphics_Gdi",
+] }
 once_cell = "1.20.2"
 
 [target.'cfg(not(target_os = "android"))'.dependencies]
