--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   bitsdojo_window: ^0.1.6
   flutter_window_close: ^1.2.0
   tray_manager: ^0.3.0
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
   build_runner: ^2.4.11
