--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -35,3 +35,4 @@ rust_decimal_macros = "1.36.0"
 windows = { version="0.58.0", features = ["Win32_Storage", "Win32_Storage_FileSystem"] }
 async-trait = "0.1.83"
 thiserror = "2.0.3"
+uuid = { version = "1.11.0", features = ["v4"] }
