--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -33,6 +33,7 @@ async-trait = "0.1.83"
 sysinfo = { version = "0.31.4", features = ["windows"] }
 tracing-appender = "0.2.3"
 chrono = "0.4.38"
+windows = { version = "0.58.0", features = ["Services", "Services_Store" ] }
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
