--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -34,6 +34,7 @@ sysinfo = { version = "0.31.4", features = ["windows"] }
 tracing-appender = "0.2.3"
 chrono = "0.4.38"
 windows = { version = "0.58.0", features = ["Services", "Services_Store" ] }
+sha2 = "0.10.8"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
