feat: Implement the new register modal

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -123,6 +123,8 @@ flutter:
     - assets/tray_icon_light.ico
     - assets/tray_icon_dark.ico
     - assets/watermark.png
+    - assets/bandcamp.svg
+    - assets/itch.svg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
