--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -435,6 +435,7 @@ jobs:
           echo "$APP_STORE_CONNECT_API_KEY" | base64 --decode --output $RUNNER_TEMP/AuthKey_$APP_STORE_CONNECT_KEYID.p8
       - name: All
         run: |
+          export RUNE_APPSTORE_BUILD_VERSION=$(echo "$REF_NAME" | sed -E 's/^v([0-9]+\.[0-9]+\.[0-9]+).*/\1/')
           brew install just
           just macos-ci-all-appstore
         env:
@@ -448,7 +449,6 @@ jobs:
           REF_NAME: ${{ github.ref_name }}
           SHA: ${{ steps.short-sha.outputs.sha }}
           RUNE_APPSTORE_BUILD_NUMBER: ${{ github.run_number }}
-          RUNE_APPSTORE_BUILD_VERSION: ${{ github.ref_name == '' && '0.0.0' || github.ref_name =~ 'v(\d+\.\d+\.\d+).*' && regex_match[1] || '0.0.0' }}
 
       - name: Clean up
         if: ${{ always() }}
