--- a/database/Cargo.toml
+++ b/database/Cargo.toml
@@ -36,3 +36,4 @@ windows = { version="0.58.0", features = ["Win32_Storage", "Win32_Storage_FileSy
 async-trait = "0.1.83"
 thiserror = "2.0.3"
 uuid = { version = "1.11.0", features = ["v4"] }
+regex = "1.11.1"
