--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,9 +72,9 @@ dependencies:
   intl: ^0.19.0
   bitsdojo_window: ^0.1.6
   flutter_window_close: ^1.2.0
-  tray_manager: ^0.3.0
   flutter_staggered_grid_view: ^0.7.0
   local_notifier: ^0.1.6
+  system_tray: ^2.0.3
 
 dev_dependencies:
   build_runner: ^2.4.11
