--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,10 @@ dependencies:
   flutter_window_close: ^1.2.0
   flutter_staggered_grid_view: ^0.7.0
   local_notifier: ^0.1.6
-  system_tray: ^2.0.3
+  system_tray:
+    git:
+      url: https://github.com/Losses/system_tray.git
+      ref: bc64829aa789a890d6dde5f4d960d7dcd3152341
 
 dev_dependencies:
   build_runner: ^2.4.11
