--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -35,6 +35,7 @@ tracing-appender = "0.2.3"
 chrono = "0.4.38"
 windows = { version = "0.58.0", features = ["Services", "Services_Store" ] }
 sha2 = "0.10.8"
+swift-bridge = "0.1.57"
 
 [build-dependencies]
 anyhow = { version = "1.0.89", features = ["backtrace"] }
@@ -44,6 +45,7 @@ vergen-git2 = { version = "1.0.1", features = [
     "rustc",
     "si",
 ] }
+swift-bridge-build = "0.1.57"
 
 # Uncomment below to target the web.
 # tokio_with_wasm = { version = "0.6.0", features = ["sync", "rt"] }
