--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -455,6 +455,7 @@ jobs:
 
   build-and-release-mac-app-store:
     runs-on: macos-latest
+    if: startsWith(github.ref, 'refs/tags/v')
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
