Update and rename main.yml to linter.yml
Signed-off-by: XMLHexagram <52130356+XMLHexagram@users.noreply.github.com>

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -9,6 +9,10 @@ on:
       - main
   workflow_dispatch:
 
+permissions:
+  checks: write
+  pull-requests: write
+
 jobs:
   rust-analyze:
     name: Rust Analyze
@@ -35,7 +39,7 @@ jobs:
 
     steps:
       - name: Check Out
-      - uses: actions/checkout@v4
+        uses: actions/checkout@v4
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
