--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -3,10 +3,10 @@ name: Lint
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 permissions:
